
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Jan-2011 Christophe Demko
 # [#23915] Trashed articles - no indication of being trashed , when viewed at front of site
 # [#24404] Update GeSHI to 1.0.8.9 (Michael Babker)
 # [#24269] com_contact view contact > links (Nikolai Plath, Sergio Iglesias, Jennifer Marriott)

28-Jan-2011 Jean-Marie Simonet
 $ Correcting parse issues in 14 installation langs
 
27-Jan-2011 Mark Dexter
# [#24644] Joomla! Web Application Framework library is uninstallable
# Fix SVN properties on some joomla_update sql scripts 

27-Jan-2011 Christophe Demko
 # [#24558] Improve the Directory Permissions in com_admin (Rouven Weßling)

27-Jan-2011 Jean-Marie Simonet
 # [#24320] Unstyled dialog when clicking 'new' in module manager. Thanks Andrea.
 # Updating credits
 # [#24550] Manifest data is not being serialized as JSON during install and discovery install. Thanks Brian Towles.

26-Jan-2011 Mark Dexter
# [#24513] *Incorrect error string after saving default menu item with set 'Default Page' radio button to 'no' value
# [#24607] *No translation of options (plugin names) in ordering field of plugins

26-Jan-2011 Jean-Marie Simonet
 # [#24599] Templates filter searches all extensions. Thanks CY Lee.
 $ Updating zh-CN
 # [#24619] Wrong description language code for email1 field. Thanks Bill.
 $ Correcting some lang strings values.
 #$ [#24615] Extra language definitions for icon tooltips in Messages component
 #$ [#24587] beez template typo with position-15
 $ Adding pt-PT installation lang
 
25-Jan-2011 Jean-Marie Simonet
 $ Adding el-GR, ka-GE installation langs
 $ Adding fi-FI installation langs. Modifying gu-IN.
 # [#24580] Localise xml default language is not highlighted in the drop down
 # [#24582] Languages not installed in db but present in the language folders in joomla issue
 # [#24564] mod_articles_category creates wrong html code. Thanks Andras.
